@@ -283,7 +283,29 @@ public class TechPanel extends ActionPanel
             m_currTokens = getCurrentPlayer().getResources().getQuantity(Constants.TECH_TOKENS);
             //If this player has tokens, roll them.
             if(m_currTokens > 0)
-                m_techRoll = new TechRoll(null, m_currTokens);
+              {  
+                 List<TechAdvance> techCategories = getAvailableCategories();
+                 
+                 //if (available.isEmpty())
+                 if (techCategories.isEmpty())
+                 {
+                   //JOptionPane.showMessageDialog(TechPanel.this, "No more available tech advances");
+                   //TODO COMCO this won't work
+                   //getCurrentPlayer().getResources().removeResource(getData().getResourceList().getResource(Constants.TECH_TOKENS), m_currTokens);
+                   return;
+                 }
+                 
+                 TechAdvance category = null;
+                 JList list = new JList(new Vector<TechAdvance>(techCategories));
+                 JPanel panel = new JPanel();
+                 panel.setLayout(new BorderLayout());
+                 panel.add(list, BorderLayout.CENTER);
+                 panel.add(new JLabel("Select which tech chart you want to roll for"), BorderLayout.NORTH);
+                 list.setSelectedIndex(0);
+                 JOptionPane.showMessageDialog(JOptionPane.getFrameForComponent(TechPanel.this), panel, "Select chart", JOptionPane.PLAIN_MESSAGE);
+                 category = (TechAdvance) list.getSelectedValue();
+                 m_techRoll = new TechRoll(category, m_currTokens);
+              }
             else
                 m_techRoll = null;
             release();            
